data/derived/fa15/progs/unify/prog3691.ml.out
Characters 62-73:
  if b=b' then (b', false)
               ^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type 'c -> 'c * bool
